Markdown to HTML

--- a/server/templates/note.html
+++ b/server/templates/note.html
@@ -14,7 +14,7 @@
     <h1>{{.Title}}</h1>
     <h4>{{.Created}} - {{range .Tags}} {{.}} {{end}}</h4>
 
-    {{.Content}}
+    {{.HTML}}
 </body>
 
 </html>
