--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -12,7 +12,16 @@
 <body>
     <div class="container">
         <header>
-            <h2> <a href="/"> KM</a></h2>
+            <nav>
+                <ul>
+                    <li><strong><a href="/"> KM</a></strong></li>
+                </ul>
+                <ul>
+                    <li>
+                        <a href="/new" role="button">New</a>
+                    </li>
+                </ul>
+            </nav>
         </header>
 
         <ul>
