--- a/server/templates/login.html
+++ b/server/templates/login.html
@@ -11,6 +11,11 @@
 
 <body>
     <div class="container">
+        <header>
+            <h2> <a href="/"> KM</a></h2>
+        </header>
+
+        <h2>Login:</h2>
         <form action="/login" method="POST">
             <input type="text" name="otp" id="otp">
             <input type="submit" value="submit">
