--- a/server/templates/login.html
+++ b/server/templates/login.html
@@ -18,9 +18,32 @@
         <h2>Login:</h2>
         <form action="/login" method="POST">
             <input type="text" name="otp" id="otp">
-            <input type="submit" value="submit">
+            <button id="submit-btn">Submit</button>
         </form>
     </div>
 </body>
 
 </html>
+<script>
+    document.getElementById("submit-btn").addEventListener('click', async (e) => {
+        e.preventDefault();
+
+        let otp = document.getElementById("otp").value;
+
+        let formData = new FormData;
+        formData.append('otp', otp);
+
+        let res = await fetch("/login", {
+            method: 'POST',
+            body: formData,
+        })
+
+        if (res.ok) {
+            window.location.href = "/";
+        } else {
+            window.location.reload();
+        }
+
+    })
+
+</script>
