--- a/server/templates/login.html
+++ b/server/templates/login.html
@@ -16,7 +16,7 @@
         </header>
 
         <h2>Login:</h2>
-        <form action="/login" method="POST">
+        <form autocomplete="off">
             <input type="text" name="otp" id="otp">
             <button id="submit-btn">Submit</button>
         </form>
