--- a/server/templates/new.html
+++ b/server/templates/new.html
@@ -14,7 +14,7 @@
         <header>
             <h2> <a href="/"> KM</a></h2>
         </header>
-        <form>
+        <form autocomplete="off">
             <div class="grid">
                 <label for="title">Title
                     <input type="text" name="title" id="title" placeholder="Title" required>
