Exit focus on escape

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -58,5 +58,12 @@
             }
         }
 
+        else {
+            if (e.key == "Escape") {
+                e.preventDefault();
+                document.activeElement.blur();
+            }
+        }
+
     };
 </script>
