Get notes of a particular tag and show tags

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -83,7 +83,11 @@
             }
 
             if (e.key == "n") {
-                window.location.href = "/new"
+                window.location.href = "/new";
+            }
+
+            if (e.key == "t") {
+                window.location.href = "/tags";
             }
         }
 
