Filter tags based on search

--- a/server/templates/tags.html
+++ b/server/templates/tags.html
@@ -18,7 +18,7 @@
                 </ul>
                 <ul>
                     <li>
-                        <input type="text" name="search" id="search">
+                        <input type="text" name="search" placeholder="Search" id="search">
                     </li>
                     <li>
                         <a href="/new" role="button">New</a>
@@ -27,10 +27,35 @@
             </nav>
         </header>
 
-        <ul>
+        <input type="text" id="tagSearch" onkeyup="search()" style="width: 50%;" placeholder="Tags">
+
+        <ul id="tagsList">
             {{range .}}
             <li><a href="/tags/{{.}}">{{.}}</a></li>
             {{end}}
         </ul>
     </div>
 </body>
+
+</html>
+<script>
+    function search() {
+        // Declare variables
+        var input, filter, ul, li, a, i, txtValue;
+        input = document.getElementById('tagSearch');
+        filter = input.value.toUpperCase();
+        ul = document.getElementById("tagsList");
+        li = ul.getElementsByTagName('li');
+
+        // Loop through all list items, and hide those who don't match the search query
+        for (i = 0; i < li.length; i++) {
+            a = li[i].getElementsByTagName("a")[0];
+            txtValue = a.textContent || a.innerText;
+            if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                li[i].style.display = "";
+            } else {
+                li[i].style.display = "none";
+            }
+        }
+    }
+</script>
