--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -18,7 +18,7 @@
                 </ul>
                 <ul>
                     <li>
-                        <input type="text" name="search" id="search">
+                        <input type="text" name="search" placeholder="Search" id="search">
                     </li>
                     <li>
                         <a href="/new" role="button">New</a>
