fix simplemde not taking textarea value

--- a/server/templates/new.html
+++ b/server/templates/new.html
@@ -55,7 +55,7 @@
         let tags = tagsString.split(",")
         tags = tags.map(s => s.trim());
         let protected = document.querySelector("#protected").checked;
-        let content = document.getElementById("content").value;
+        let content = simplemde.value();
 
         let obj = {
             'title': title,
