Protected will stay protected when editing

--- a/server/templates/edit.html
+++ b/server/templates/edit.html
@@ -28,7 +28,7 @@
             </div>
             <label for="protected">
                 Protected:
-                <input type="checkbox" name="protected" id="protected">
+                <input type="checkbox" name="protected" id="protected" {{if .Protected}} checked="true" {{end}}>
             </label>
 
 
